# archon-bot

./: .gitignore  .markdownlint.json  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  analyze.py  check-vekn.py  legality.py  script.py  setup.cfg
.github/workflows/: static.yml
archon_bot/: __init__.py  bot.py  commands.py  db.py  hikari_bot.py  permissions.py  serialize.py  tournament.py  utils.py
tests/: conftest.py  test_bot.py  test_tournament.py
