[metadata]
name = archon-bot
version = 1.3.dev0
author = lionelpx
author_email = lionel.panhaleux@gmail.com
url = http://github.com/lionel-panhaleux/archon-bot
description="Discord bot for VTES tournaments",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = vampire vtes ccg discord bot
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Environment :: Web Environment
    Environment :: Plugins
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Communications :: Chat
    Topic :: Games/Entertainment

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    aiohttp
    asgiref
    krcg >= 2.25
    hikari[speedups]
    msgspec
    psycopg[pool]
    stringcase
    unidecode
    uvloop

[options.extras_require]
dev =
    black
    flake8
    ipdb
    ipython
    pytest
    pytest-asyncio
    zest.releaser[recommended]

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    archon-bot = archon_bot:main

[flake8]
max-line-length = 88
exclude = build, dist
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[distutils]
index-servers = pypi

[zest.releaser]
create-wheel = yes
